[package]
name = "ura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
[build-dependencies]
cc="1.0"
bindgen = "0.52"
[dependencies.uuid]
version="1.11.0"
features=[
    "v4",
    "fast-rng",
    "macro-diagnostics",
]